--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '1.0'
 
 services:
   web-api:
-    container_name: url-shortner-rest-api
+    container_name: rest-api
     build: .
     ports: 
       - 8653:8653 
@@ -18,6 +18,7 @@ services:
     container_name: my-redis
     ports:
       - 6379:6379
+    command: ["redis-server", "--bind", "redis", "--port", "6379"]
     # environment: 
     #   - REDIS_HOST=${REDIS_HOST} 
     #   - REDIS_PASSWORD=${REDIS_PASSWORD}
