--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,10 @@ services:
     ports:
       - 6379:6379
     command: ["redis-server", "--bind", "redis", "--port", "6379"]
+    env_file:
+     - ./backend/.env.docker
     # environment: 
-    #   - REDIS_HOST=${REDIS_HOST} 
+    #   - REDIS_HOST=redis:6379
     #   - REDIS_PASSWORD=${REDIS_PASSWORD}
     restart: always
     networks:
