--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,8 @@
 TOKEN_TTL="1800"
 JWT_PRIVATE_KEY="<<JWT_KEY>>"
 
-REDIS_HOST="redis:6379"
+#REDIS_HOST="redis:6379"
+REDIS_HOST="localhost:6379"
 REDIS_PASSWORD=""
 
 
