--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     container_name: rest-api
     build: .
     command: ["./urlshortner", "serveapi"]
+    volumes:
+      - sqlite_data:/app/data
     ports: 
       - 8653:8653 
     restart: on-failure
@@ -30,8 +32,6 @@ services:
   sqlite3:
     image: python:3.9-alpine
     container_name: my-sqlite3
-    volumes:
-      - ./backend/data:/data
     command: ["sh", "-c", "apk add --no-cache sqlite && python -m pip install sqlite-utils && tail -f /dev/null"]
     restart: always
     networks:
@@ -51,7 +51,7 @@ services:
       - TZ=UTC
       - ENABLE_UWSGI=true
     volumes:
-      - sqlite_data:/data/db
+      - sqlite_data:/data
     restart: unless-stopped
 
 # Networks to be created to facilitate communication between containers
