--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,14 +3,12 @@ TOKEN_TTL="1800"
 JWT_PRIVATE_KEY="<<JWT_KEY>>"
 
 REDIS_HOST="redis:6379"
-#REDIS_HOST="localhost:6379"
 REDIS_PASSWORD=""
 
 
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT=587
-EMAIL_FROM="adewole25real@gmail.com"
-EMAIL_PASSWORD="bzaz suey oawc mapk"
-
+EMAIL_FROM="xxxx.com"
+EMAIL_PASSWORD="xxxxxx"
 
 APP_PORT=8653
